css/main.css
body{
    display: block;
    font-family: 'Nobile', sans-serif;
}
/* -------- Styling the menu-mar ------- */
#nav-bar{
    background-color: black;
    overflow: auto;
    margin: 0;
}

.logo{
    display: inline-block;
    padding: 20px;
    color: red;
    background: pink;
}

.left {
    display: inline-block;
    margin: 0 auto;
}

.horizontalList{
    list-style: none;
    padding: 20px;
    margin: 0;
}
.horizontalList li{
    display: inline;
    padding: 10px;
}
.horizontalList a{
    color: white;
    text-decoration: none;
}

.horizontalList a.dropdown {
    color: red;
    box-shadow: 0 2px 0 0  red;
}

.right{
    display: inline;
    float: right;
    margin-right: 25px;
}
/* -------- sub-menu style ---------- */
.sub-menu{
    list-style: none;
    padding: 20px;
    margin: 0;
}
.sub-menu li{
    display: inline;
    padding: 10px;
}
.sub-menu li a{
    color: white;
    text-decoration: none;
}
a:hover{
    color: red;
    box-shadow: 0 3px 0 0 red;
}

/* ----- showCase menu style ------ */
.showCase-menu{
    background:linear-gradient( 45deg,
        rgba(255, 0, 0, 0.75), 
        rgba(14, 14, 14, 0.40)), url(http://www.screenscoop.com/wp-content/uploads/2018/11/Aquaman-Official-Images-09.jpg) no-repeat;
    background-size: cover;
    background-position: center;
    height: 80vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: left;
    text-align: left;
    padding: 200 25px;  
}

.text-box{
    width: 50%;
    color: #FDFFFC;
}

.text-box h1{
    font-size: 80px;
    font-family: 'Hanalei Fill', cursive;
    text-shadow: 5px 5px 5px black;
    font-weight: 700;
    margin-top: 0px;
    margin-left: 10px;
    margin-bottom: 0px;

}

.text-box h4{
    font-size: 16px;
    font-family: 'Permanent Marker', cursive;
    text-shadow: 0 0 3px black;
    font-weight: 300;
    margin-top: 0;
    margin-left: 10px;
    margin-bottom: 0;

}

.text-box p{
    font-size: 15px;
    font-family: 'Nobile', sans-serif;
    text-shadow: 0 0 3px black;
    font-weight: 100;
    margin-top: 20px;
    margin-left: 10px;
    margin-bottom: 10px;
    

}

button {
    display: inline-block;
    padding: 10px 18px;
    color: white;
    font-family: 'Nobile', sans-serif;
    cursor: pointer;
    background: none;
    margin-left: 25px;
    border-radius: 5px 5px 5px 5px;

}
.fancy-btn:hover {
    background-color: white;
    color: black;
    border-radius: 50px 50px 50px 50px;
}

/* -----------Styling Movie-Selection---------- */

.movie-container{
    background: black;
    color: white;
    display: flex;
    flex-direction: column;
    padding-top: 3px;
}

.movie-container h2{
    margin: 0;
    font-weight: 0;
    font-size: 16px;
}

.movie-selection{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.movie-selection div {
    background: url(https://i.pinimg.com/originals/35/5d/65/355d65da2e1dc28b3399951765bc5fb1.jpg);
    background-size: cover;
    width: 100%;
    height: 160px;
    margin: 0.3%;
}


/* ------- Styling footer -------- */
footer {
    background: black;
    text-align: center;
    color: white;
}

